<resources>
    <string name="app_name">PFP Notes</string>

    <!--SignIn layout-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_remember">Stay signed in.</string>
    <string name="sign_in">Sign in</string>
    <string name="notes">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>

    <!--NoteAddActivity-->
    <string name="place">Place</string>
    <string name="dimensionText">Dimension (cm)</string>
    <string name="dimens_hint">Click button to enter dimensionText</string>
    <string name="image_description">Image description</string>
    <string name="add_node">Add Note</string>

    <!--menu actions-->
    <string name="menu_action_upload">Upload</string>
    <string name="menu_action_drawings">Drawings</string>
    <string name="menu_action_update">Update</string>
    <string name="menu_action_price_list">Price list</string>
    <string name="menu_action_place_list">Place list</string>
    <string name="menu_action_sign_out">Sign out</string>
    <string name="menu_action_sign_in">Sign in</string>

    <!--PriceListActivity-->
    <string name="price_list">Price List</string>
    <string name="interval">Interval</string>
    <string name="price">Price</string>

    <!--PlaceListActivity-->
    <string name="place_list">Place List</string>
    <string name="place_full_name">Place name</string>
    <string name="place_short_name">Short</string>

    <string name="text_view">text view</string>

    <string name="data_version">realtime_data_version</string>
    <string name="version_key">version_key</string>

    <!--Button names-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="dimension_uppercase">DIMENSION</string>
    <string name="images">Images</string>
    <string name="add_note">Add note</string>

    <string name="email_address">email</string>
    <string name="title_activity_note_edit">Edit</string>
    <string name="signed_in">signed_in</string>

    <string name="delete_dialog_message">Delete image?</string>
    <string name="connection_dialog_message">No network. Switch it on or try later.</string>
    <string name="toast_sign_out">You signed out successfully.</string>
    <string name="upload">Upload</string>

    <string name="progress_max_100">100</string>
    <string name="no_items_to_upload">No items to upload.</string>
    <string name="title_activity_detail">Detail</string>
    <string name="notes_size_text">Notes: %1$d</string>
    <string name="images_size_text">Images: %1$d</string>
    <string name="date">Date</string>
    <string name="uploaded">Uploaded</string>
    <string name="dimension_text">Dimension</string>

    <string name="price_text">£%1$.2f</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_info_text">%1$d holes\nexp. £%2$.2f</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_image_pager_fullscreen">ImagePagerFullscreenActivity</string>
    <string name="image_transition_name">note_image</string>
    <string name="error_Invalid_email">Not a valid email address!</string>
    <string name="error_invalid_password">Not a valid password!</string>

    <!--currency-->
    <string name="dollar">$</string>
    <string name="euro">€</string>
    <string name="pound">£</string>
    <string name="price_format">%1$s%2$.2f</string>

</resources>
